--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <div class="col-span-3 grid grid-cols-1 gap-16 p-16 bg-slate-90 rounded-2xl border border-slate-80 shadow-[22px_22px_36px_#FFFFFF,-22px_-22px_36px_#D4AF37]">
     
     <div class="flex flex-col gap-2">
-        <label class="text-[22px] font-black text-orange-150/60 uppercase tracking-[3.2em] ml-2">FiR$)</label>
+        <label class="text-[22px] font-black text-orange-150/60 uppercase tracking-[3.2em] ml-2">F$)</label>
         <div class="relative group">
             <input type="number" id="valorInput" oninput="calcFiscal()" 
                    class="w-full bg-slate-90 p-5 rounded-2xl text-3xl font-bold text-orange-80 
