--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,36 @@ function executarPagamentoPOS() {
     // Exemplo: window.location.href = "https://loja.infinitepay.io/partner12";
 }
 </script>
+  <script>
+        function emitir(tipo) {
+    const vTotal = parseFloat(document.getElementById('valorInput').value) || 0;
+    const slot = document.getElementById('slotDestino').value;
+
+    if (vTotal <= 0) return alert("ERRO: Valor de autoridade não definido.");
+
+    // Garante que a estrutura detalhada existe
+    if (!v12_finance.detalhado) v12_finance.detalhado = {};
+
+    // DIRECCIONAMENTO
+    if (slot.startsWith('receita')) {
+        v12_finance.receita += vTotal;
+    } else {
+        v12_finance.despesa += vTotal;
+        // Alimenta o slot específico (ex: obras)
+        v12_finance.detalhado[slot] = (v12_finance.detalhado[slot] || 0) + vTotal;
+    }
+
+    // Persistência
+    salvarTudoV12();
+    if (typeof updateDRE === "function") updateDRE();
+
+    // Com o slot definido, a nota fiscal agora sai detalhada
+    gerarNotaV12(tipo, vTotal, slot);
+}
+    </script>
+
+
+    
 
      <script>
 // ==========================================
