--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <style>
 
-        <head>
+        </head>
    
     /* Animação de Varredura Laser Starlink */
     @keyframes scan {
@@ -216,11 +216,11 @@
 
     <div class="grid grid-cols-2 gap-4 mt-6">
     <div class="p-4 bg-slate-900 rounded-xl border border-emerald-500/30">
-        <p class="text-[9px] text-slate-500 uppercase">Status AWS Lambda</p>
+        <p class="text-[9px] text-slate-500 uppercase">Status</p>
         <p class="text-emerald-400 font-black tracking-widest">● OPERACIONAL</p>
     </div>
     <div class="p-4 bg-slate-900 rounded-xl border border-blue-500/30">
-        <p class="text-[9px] text-slate-500 uppercase">WhatsApp Meta API</p>
+        <p class="text-[9px] text-slate-500 uppercase">WhatsApp</p>
         <p class="text-blue-400 font-black tracking-widest">● SINCRONIZADO</p>
     </div>
 </div>
@@ -323,9 +323,7 @@
         </div>
 
         <div class="flex gap-4">
-            <div class="glass p-8 rounded-[2.5rem] card-3d border-t-4 border-orange-600">
-                    <h3 class="text-[11px] font-black text-orange-500 mb-6 uppercase tracking-[0.2em] text-center italic"></h3>
-                    <div class="space-y-3">           
+                     
             <button id="btnScanner" onclick="toggleScanner()" 
                 class="group relative bg-slate-900 text-white px-8 py-5 rounded-2xl text-[11px] font-black uppercase tracking-[0.2em] hover:scale-105 transition-all shadow-2xl active:scale-95 border border-slate-700">
                 <span class="flex items-center gap-2">
