--- a/index.html
+++ b/index.html
@@ -991,15 +991,7 @@ function liberarUsuario(email) {
 
     <script>
 
-               function formatarDocumento(str) {
-    if (str.length === 11) {
-        return str.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, "$1.$2.$3-$4");
-    }
-    if (str.length === 14) {
-        return str.replace(/(\d{2})(\d{3})(\d{3})(\d{4})(\d{2})/, "$1.$2.$3/$4-$5");
-    }
-    return str;
-}
+ 
 
 function conectarAssinador() {
     const statusEl = document.getElementById("statusAssinador");
@@ -1056,6 +1048,9 @@ console.log("Sistema Sentinela V12: Pronto para Operação.");
         <p><strong>Dívida Ativa PGFN:</strong> ${diag.pgfn_divida || "LIMPO"}</p>
         ${isOffline ? '<p class="text-orange-600 font-bold mt-2">→ Modo Contingência (Offline)</p>' : ''}
     `;
+        document.getElementById('prtDoc').innerText = input;
+                document.getElementById('prtData').innerText = new Date().toLocaleString();
+                document.getElementById('prtProt').innerText = 'SENT-' + Math.random().toString(36).toUpperCase().substring(2,10);
     </script>
 
     <script>
