Add updateDRE function to display financial data

--- a/index.html
+++ b/index.html
@@ -900,6 +900,15 @@ function liberarUsuario(email) {
 };
     </script>
 
+       <script>
+        
+        function updateDRE() {
+            document.getElementById('dre_receita').innerText = `R$ ${v12_finance.receita.toFixed(2)}`;
+            document.getElementById('dre_despesa').innerText = `R$ ${v12_finance.despesa.toFixed(2)}`;
+            document.getElementById('dre_invest').innerText = `R$ ${v12_finance.invest.toFixed(2)}`;
+        }
+    </script>
+
   
       <script>
                 function updateDRE() {
