--- a/index.html
+++ b/index.html
@@ -872,6 +872,8 @@ function calcFiscal() {
 }
 
     </script>
+
+     <script>
         function updateDRE() {
             document.getElementById('dre_receita').innerText = `R$ ${v12_finance.receita.toFixed(2)}`;
             document.getElementById('dre_despesa').innerText = `R$ ${v12_finance.despesa.toFixed(2)}`;
