--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
         printArea.innerHTML = `
             <div style="font-family: 'Inter', sans-serif; padding: 40px; color: #000; max-width: 900px; margin: auto;">
                 <div style="text-align: center; border-bottom: 4px solid #000; padding-bottom: 20px; margin-bottom: 30px;">
-                    <h1 style="font-size: 32px; font-weight: 900; margin: 0; font-family: 'JetBrains Mono', monospace;">SENTINELA V12</h1>
+                    <h1 style="font-size: 32px; font-weight: 900; margin: 0; font-family: 'JetBrains Mono', monospace;">SISTEMA DE NOTAS V12</h1>
                     <h2 style="font-size: 18px; margin: 5px 0 0 0;">RELATÓRIO GERENCIAL E FECHAMENTO D.R.E</h2>
                     <p style="margin: 5px 0 0 0; font-size: 12px; color: #555;">AUDITORIA GERADA EM: ${new Date().toLocaleString('pt-BR')}</p>
                 </div>
